syntax = "proto3";
package helium;

import "blockchain_token_type_v1.proto";

message blockchain_txn_payment_v2 {
  bytes payer = 1;
  repeated payment payments = 2;
  uint64 fee = 3;
  uint64 nonce = 4;
  bytes signature = 5;
}

message payment {
  bytes payee = 1;
  uint64 amount = 2;
  uint64 memo = 3;
  bool max = 4;
  blockchain_token_type_v1 token_type = 5;
}
